[package]
name = "jose-interop"
version = "0.0.0"
edition = "2021"
publish = false
description = "Out-of-tree CLI harness used by interop tests against panva/jose"

[[bin]]
name = "jose-interop"
path = "src/main.rs"

[dependencies]
jose-rs = { path = "../..", default-features = false, features = ["post-quantum"] }
kryptering = { version = "0.2", default-features = false, features = ["post-quantum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
